[gd_scene load_steps=28 format=3 uid="uid://c1cow3d2qc07g"]

[ext_resource type="Texture2D" uid="uid://c1ummadovk4un" path="res://assets/player/knight_m_hit_anim_f0.png" id="1_5gtgg"]
[ext_resource type="Script" uid="uid://c5120cpj3wehg" path="res://scenes/game_objects/player/player.gd" id="1_h17s1"]
[ext_resource type="Texture2D" uid="uid://cu2rmy8kn18q8" path="res://assets/player/knight_m_idle_anim_f0.png" id="2_h17s1"]
[ext_resource type="PackedScene" uid="uid://dckh6d7w60v3j" path="res://scenes/abilities/attack_controller.tscn" id="2_je7p5"]
[ext_resource type="Texture2D" uid="uid://dtb7vmhpcnlw8" path="res://assets/player/knight_m_idle_anim_f1.png" id="3_je7p5"]
[ext_resource type="PackedScene" uid="uid://4kqnaoa1sx3y" path="res://scenes/components/health_component.tscn" id="3_pad3l"]
[ext_resource type="Texture2D" uid="uid://b8h7voi5euy6o" path="res://assets/player/knight_m_idle_anim_f2.png" id="4_fm80t"]
[ext_resource type="PackedScene" uid="uid://ciqgwxblgwxwu" path="res://scenes/components/movement_component.tscn" id="4_g8suy"]
[ext_resource type="PackedScene" uid="uid://cvb4oretd7oee" path="res://scenes/components/flash_component.tscn" id="4_qwalg"]
[ext_resource type="Shader" uid="uid://cukjisu8fat63" path="res://scenes/components/flash_component.gdshader" id="5_g8suy"]
[ext_resource type="Texture2D" uid="uid://bofba20tcwytm" path="res://assets/player/knight_m_idle_anim_f3.png" id="5_gx1jg"]
[ext_resource type="Texture2D" uid="uid://bcl504x7tix0i" path="res://assets/player/knight_m_run_anim_f0.png" id="6_ugbui"]
[ext_resource type="Texture2D" uid="uid://b6e8k5lhnwva3" path="res://assets/player/knight_m_run_anim_f1.png" id="7_fcs02"]
[ext_resource type="Texture2D" uid="uid://c8q1xoxhjbd2q" path="res://assets/player/knight_m_run_anim_f2.png" id="8_myrg7"]
[ext_resource type="Texture2D" uid="uid://d4hutx1dq1q3k" path="res://assets/player/knight_m_run_anim_f3.png" id="9_kvlxm"]
[ext_resource type="AudioStream" uid="uid://d3m56me0woxwm" path="res://assets/sounds/hit/damage1.ogg" id="16_rl6uc"]
[ext_resource type="AudioStream" uid="uid://claqmtp2lco6o" path="res://assets/sounds/hit/damage2.ogg" id="17_d2mjs"]
[ext_resource type="AudioStream" uid="uid://b1lmnlacuv5nt" path="res://assets/sounds/hit/damage3.ogg" id="18_r1mhb"]
[ext_resource type="AudioStream" uid="uid://cfjhx6gkcnykj" path="res://assets/sounds/hit/damage4.ogg" id="19_7mys8"]
[ext_resource type="AudioStream" uid="uid://dv8i2uwpevcdj" path="res://assets/sounds/hit/damage5.ogg" id="20_4fxbh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ns1k"]
resource_local_to_scene = true
shader = ExtResource("5_g8suy")
shader_parameter/percent = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84ntt"]
bg_color = Color(0.886275, 0.2, 0.219608, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.133333, 0.133333, 0.133333, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_3mdk8"]
radius = 43.0116

[sub_resource type="SpriteFrames" id="SpriteFrames_uf5tr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5gtgg")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h17s1")
}, {
"duration": 1.0,
"texture": ExtResource("3_je7p5")
}, {
"duration": 1.0,
"texture": ExtResource("4_fm80t")
}, {
"duration": 1.0,
"texture": ExtResource("5_gx1jg")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ugbui")
}, {
"duration": 1.0,
"texture": ExtResource("7_fcs02")
}, {
"duration": 1.0,
"texture": ExtResource("8_myrg7")
}, {
"duration": 1.0,
"texture": ExtResource("9_kvlxm")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lgqa7"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_84ntt"]
radius = 5.0
height = 16.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xqgej"]
streams_count = 5
stream_0/stream = ExtResource("16_rl6uc")
stream_1/stream = ExtResource("17_d2mjs")
stream_2/stream = ExtResource("18_r1mhb")
stream_3/stream = ExtResource("19_7mys8")
stream_4/stream = ExtResource("20_4fxbh")

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource("1_h17s1")

[node name="AbilityManager" type="Node" parent="."]

[node name="AttackController" parent="AbilityManager" instance=ExtResource("2_je7p5")]

[node name="HealthComponent" parent="." instance=ExtResource("3_pad3l")]

[node name="MovementComponent" parent="." instance=ExtResource("4_g8suy")]
max_speed = 90
acceleration = 25.0

[node name="FlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_qwalg")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../AnimatedSprite2D")
flash_material = SubResource("ShaderMaterial_1ns1k")

[node name="GracePeriod" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(24, 4)
offset_left = -12.0
offset_top = 3.0
offset_right = 12.0
offset_bottom = 7.0
pivot_offset = Vector2(12, 2)
theme_override_styles/fill = SubResource("StyleBoxFlat_84ntt")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_3mdk8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player"]]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_uf5tr")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_lgqa7")

[node name="PlayerHurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtBox"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_84ntt")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xqgej")
bus = &"SFX"

[connection signal="timeout" from="GracePeriod" to="." method="_on_grace_period_timeout"]
[connection signal="area_entered" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_entered"]
[connection signal="area_exited" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_exited"]
